<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:textSize="50sp"
        android:paddingLeft="50sp"
        android:paddingBottom="60sp"
        />
    <TextView
        android:id="@+id/txtYouth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtYouth"
        android:textSize="25sp"
        android:paddingLeft="60sp"
        android:paddingBottom="10sp"
        />
    <TextView
        android:id="@+id/txtAdult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAdult"
        android:textSize="25sp"
        android:paddingLeft="60sp"
        android:paddingBottom="10sp"
        />
    <TextView
        android:id="@+id/txtFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtFamily"
        android:textSize="25sp"
        android:paddingLeft="60sp"
        android:paddingBottom="10sp"
        />
    <TextView
        android:id="@+id/txtSenior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSenior"
        android:textSize="25sp"
        android:paddingLeft="60sp"
        android:paddingBottom="10sp"
        />

</LinearLayout>